2012-02-22  Joseph Myers  <joseph@codesourcery.com>

	* manual/libc.texinfo (VERSION, UPDATED): Revert.

2012-02-21  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: More jn test ULP updates.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Likewise.

2012-02-20  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/__longjmp.S: Unwind in the 'thread' path
	using a normal save/restore sequence, rather than allocating a
	dummy stack frame just to store a frame pointer and restore.
	* sysdeps/unix/sysv/linux/sparc/sparc32/____longjmp_chk.S: Likewise.

2012-02-21  Joseph Myers  <joseph@codesourcery.com>

	* manual/install.texi: Fix stray word in line-wrapped comment.

2012-02-20  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/elf/configure.in (PI_STATIC_AND_HIDDEN): Define if
	both binutils and gcc support GOTDATA.

	* sysdeps/unix/sparc/sysdep.h: Document why we don't use
	"rd %pc" in the PIC register setup sequences.

	* sysdeps/sparc/crti.S: Try to use GOTDATA relocs.
	* sysdeps/sparc/sparc32/dl-machine.h (RTLD_START): Likewise.
	* sysdeps/sparc/sparc32/elf/start.S: Likewise.
	* sysdeps/sparc/sparc64/dl-machine.h (RTLD_START): Likewise.
	* sysdeps/sparc/sparc64/elf/start.S: Likewise.
	* sysdeps/sparc/sparc64/multiarch/memcpy.S: Likewise.
	* sysdeps/sparc/sparc64/multiarch/memset.S: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/____longjmp_chk.S: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sysdep.h
	(SYSCALL_ERROR_HANDLER): Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/____longjmp_chk.S: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/brk.S: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/sysdep.h
	(SYSCALL_ERROR_HANDLER): Likewise.

	* config.h.in (HAVE_BINUTILS_GOTDATA): New.
	(HAVE_GCC_GOTDATA): New.
	* sysdeps/sparc/elf/configure.in: Test for GOTDATA
	relocation support in both binutils and gcc.
	* sysdeps/sparc/elf/configure: Regenerate.
