@@ -10,9 +10,9 @@ Version 2.16
 * The following bugs are resolved with this release:
 
   174, 350, 411, 3335, 4026, 4596, 4822, 5077, 5805, 5993, 6884, 6907, 9739,
-  9902, 10140, 10210, 11174, 11322, 11494, 12047, 13058, 13525, 13526,
-  13527, 13528, 13529, 13530, 13531, 13532, 13533, 13547, 13551, 13552,
-  13553, 13555, 13559, 13583, 13618, 13695, 13704
+  9902, 10110, 10140, 10210, 11174, 11322, 11494, 12047, 13058, 13525,
+  13526, 13527, 13528, 13529, 13530, 13531, 13532, 13533, 13547, 13551,
+  13552, 13553, 13555, 13559, 13583, 13618, 13695, 13704
 
 * ISO C11 support:
 
